# splade-easy

./: .pre-commit-config.yaml  LICENSE  Makefile  README.md  benchmark_1000docs_32mb.json  benchmark_5000docs_16mb.json  benchmark_5000docs_32mb.json  benchmark_5000docs_8mb.json  debug.py  profile_detailed.py  pyproject.toml
agnews_index/: manifest.json
config/: agnews.yaml  nanobeir_msmarco.yaml
examples/: basic.py  basic_o.py  basic_old.py  bench.py  cprofile_new.py  cprofile_old.py  profiling.py  profiling_new.py  profiling_old.py  shard_size_benchmark.py
profile_index/: manifest.json
src/splade_easy/: __init__.py  cache.py  console.py  document.py  index.py  inverted_index.py  manifest.py  reader.py  reshard.py  retriever.py  schema.fbs  schemas.py  scoring.py  shard.py  splade_index.py  utils.py  writer.py
src/splade_easy/SpladeEasy/: Document.py  KeyValue.py  TokenWeight.py
src/splade_easy/ingest/: datasets.py
tests/: test_cache.py  test_index.py  test_reshard.py  test_retriever.py  test_scoring.py  test_shard.py  test_utils.py
